--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon -e js,ejs",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "mime-types": "^2.1.27",
     "multer": "^1.4.2",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "ejs": "^3.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
